[gd_scene load_steps=6 format=2]

[ext_resource path="res://testing_angles.gd" type="Script" id=1]
[ext_resource path="res://x.png" type="Texture" id=2]
[ext_resource path="res://d.gd" type="Script" id=3]
[ext_resource path="res://paper.png" type="Texture" id=4]
[ext_resource path="res://canvas.gd" type="Script" id=5]

[node name="testing_angles" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 3000, 3000 )

[node name="canvas" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource( 5 )

[node name="a" type="Sprite" parent="."]
self_modulate = Color( 1, 0.188235, 0.188235, 1 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="label" type="Label" parent="a"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.0
margin_top = -31.0
margin_right = 33.0
margin_bottom = -17.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"
align = 1

[node name="b" type="Sprite" parent="."]
self_modulate = Color( 0.188235, 0.309804, 1, 1 )
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="label" type="Label" parent="b"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.0
margin_top = -31.0
margin_right = 33.0
margin_bottom = -17.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test"
align = 1

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
margin_left = 40.0
margin_top = 16.0
margin_right = 245.0
margin_bottom = 93.0
mouse_filter = 2
custom_constants/hseparation = 20
columns = 2

[node name="Label" type="Label" parent="CanvasLayer/GridContainer"]
margin_right = 130.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Angle:"
align = 2

[node name="angle_deg" type="Label" parent="CanvasLayer/GridContainer"]
unique_name_in_owner = true
margin_left = 150.0
margin_right = 150.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2

[node name="Label1" type="Label" parent="CanvasLayer/GridContainer"]
margin_top = 18.0
margin_right = 130.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2

[node name="angle_rad" type="Label" parent="CanvasLayer/GridContainer"]
unique_name_in_owner = true
margin_left = 150.0
margin_top = 18.0
margin_right = 150.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2

[node name="sep" type="Control" parent="CanvasLayer/GridContainer"]
margin_top = 36.0
margin_right = 130.0
margin_bottom = 41.0

[node name="sep2" type="Control" parent="CanvasLayer/GridContainer"]
margin_left = 150.0
margin_top = 36.0
margin_right = 150.0
margin_bottom = 41.0
rect_min_size = Vector2( 0, 5 )

[node name="Label3" type="Label" parent="CanvasLayer/GridContainer"]
margin_top = 45.0
margin_right = 130.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dot product:"
align = 2

[node name="dot" type="Label" parent="CanvasLayer/GridContainer"]
unique_name_in_owner = true
margin_left = 150.0
margin_top = 45.0
margin_right = 150.0
margin_bottom = 59.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2

[node name="Label5" type="Label" parent="CanvasLayer/GridContainer"]
margin_top = 63.0
margin_right = 130.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dot product (norm.):"
align = 2

[node name="dot_normalized" type="Label" parent="CanvasLayer/GridContainer"]
unique_name_in_owner = true
margin_left = 150.0
margin_top = 63.0
margin_right = 150.0
margin_bottom = 77.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_top = 16.0
margin_right = -28.0
margin_bottom = -16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Left click to place red point
Right click to place blue point"
align = 2
